--- a/web/styles/scss/fonts.scss
+++ b/web/styles/scss/fonts.scss
@@ -11,41 +11,5 @@
        url(fonts/MaterialIcons/MaterialIcons-Regular.ttf) format('truetype');
 }
 
-$weights: (
-  Thin: 100,
-  Light: 300,
-  Book: normal,
-  Medium: 500,
-  Semibold: 600,
-  Bold: bold,
-  ExtraBold: 800,
-  Black: 900
-);
-
-$families: "Montserrat", "Manuale";
-
-
-@each $name, $weight in $weights {
-  @each $family in $families {
-    @font-face {
-        font-family: $family;
-        src: url("fonts/#{$family}/#{$family}-#{$name}.eot");
-        src: url("fonts/#{$family}/#{$family}-#{$name}.eot") format('embedded-opentype'),
-             url("fonts/#{$family}/#{$family}-#{$name}.woff") format('woff'),
-             url("fonts/#{$family}/#{$family}-#{$name}.svg") format('svg');
-        font-weight: $weight;
-        font-style: normal;
-    };
-
-    @font-face {
-        font-family: $family;
-        src: url("fonts/#{$family}/#{$family}-#{$name}Italic.eot");
-        src: url("fonts/#{$family}/#{$family}-#{$name}Italic.eot") format('embedded-opentype'),
-             url("fonts/#{$family}/#{$family}-#{$name}Italic.woff") format('woff'),
-             url("fonts/#{$family}/#{$family}-#{$name}Italic.svg") format('svg');
-        font-weight: $weight;
-        font-style: italic;
-    };
-  }
-
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,500,600,700');
