playing around with material-ui unsuccessfully, moving species data into json files for the frontend to load and pass to the backend in theory

--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -22,6 +22,25 @@ li:hover {
   background-color: $dove-gray;
 }
 
+.key-value {
+  @include flexbox;
+  div {
+    @include flex;
+  }
+  div:first-child {
+      font-weight: bold;
+  }
+  
+}
+
+.flex-container {
+  @include flexbox;
+}
+
+.flex-item {
+  @include flex;
+}
+
 .being {
   @include flexbox;
   div {
