changing to bolt

--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -2,12 +2,12 @@
 @import 'mixins';
 
 body {
-  font-family: 'Bilbo';
+  font-family: 'Raleway';
   font-size: 1.2rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family:'Princess Sofia';
+  font-family:'Montserrat';
   font-weight: normal;
 }
 
