--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -69,6 +69,9 @@ li:hover {
   display: table;
   .gene {
     display: inline-table;
+    padding:5px 0;
+    min-width:0px;
+    text-transform: lowercase;
   }
 }
 
