--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -94,3 +94,19 @@ li:hover {
   height: 10px;
   @include flex;
 }
+
+
+.Axis path,
+.Axis line {
+  stroke: #E0E0E0;
+}
+
+.Axis text {
+  font-size: 11px;
+  fill: black;
+}
+
+.Axis-Bottom text {
+  transform: rotate(-45deg);
+  text-anchor: end;
+}
