--- a/web/src/main.scss
+++ b/web/src/main.scss
@@ -2,13 +2,9 @@
 @import 'mixins';
 
 body {
-  font-family: 'Raleway';
+  font-family: 'Vollkorn';
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family:'Montserrat';
-  font-weight: normal;
-}
 
 ul, li {
   list-style-type: none;
